--- a/packaging/debian/README
+++ b/packaging/debian/README
@@ -10,7 +10,7 @@ Prerequisites
 
 The prereqs for building the .deb files are:
 
-apt-get install build-essential autoconf automake autotools-dev dh-make debhelper devscripts fakeroot xutils lintian pbuilder dpkg-dev libtool libslax-dev uuid-dev libsqlite3-dev
+apt-get install build-essential autoconf automake autotools-dev dh-make debhelper devscripts fakeroot xutils lintian pbuilder dpkg-dev libtool libslax0-dev uuid-dev libsqlite3-dev
 
 Building the .deb files
 -----------------------
